--- a/shangke/03/lounge.css
+++ b/shangke/03/lounge.css
@@ -29,5 +29,45 @@ h1,p,body{
   line-height: 1.9em;
   color: #444444;
   font-family: Georgia,"Times New Roman";
+  background-image: url(images/background.gif);
+  background-repeat: repeat-x;
+  background-position: top left;
+  padding: 25px;
+  padding-left: 80px;
+  margin-right: 250px;
+  border-style: solid;
+  border-width: medium;
+  border-color: #61649f;
+  border-bottom-style: dashed;
+  width: 400px;
+  height: 400px;
+  border-radius: 200px;
+  border-radius: 50%;
+  }
+p{
+  border-style: dashed;
+  border-color: white;
+  border-top-right-radius: 2em;
+  border-bottom-left-radius: 2em; 
 }
-	
+.elixirs {
+	border-width: thin;
+	border-style: solid;
+	border-color: #007e7e;
+  width: 200px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+
+  margin-left: 20px;
+  background-image:    url(images/cocktail.gif);
+	background-repeat:   repeat-x;
+
+	text-align:          center;  /* 文本剧中对齐 */
+}
+.cd{
+  font-style: italic;
+}
+.artist{
+  font-weight: bold;
+}
