--- a/shangke/05/starbuzz.css
+++ b/shangke/05/starbuzz.css
@@ -15,7 +15,7 @@ body {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 10px;
+  margin:           0px 330px 10px 10px;
 }
 
 .sidebar {
@@ -35,6 +35,7 @@ body {
   padding:          15px;
   margin:           10px;
   font-size:        90%;
+  clear: right;
 }
 
 h1 {
@@ -58,4 +59,12 @@ a:visited {
   color:            #675c47;
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
+}
+.allcontent{
+  width: 800px;
+  padding-top:           5px;
+	padding-bottom:        5px;
+	background-color:  #675c47;
+  margin-left:          auto;
+	margin-right:         auto;
 }
