--- a/shangke/07/starbuzz.css
+++ b/shangke/07/starbuzz.css
@@ -5,27 +5,27 @@ body {
   margin:           0px;
 }
 
-#header {
+.header {
   background-color: #675c47;
-  margin:           10px;
+  margin:           10px 10px 0px 10px;
   height:           108px;
 }
 
-#main {
+section.main {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
   margin:           0px 10px 10px 10px;
 }
 
-#sidebar {
+aside{
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
   margin:           0px 10px 10px 10px;
 }
 
-#footer {
+footer {
   background-color: #675c47;
   color:            #efe5d0;
   text-align:       center;
@@ -55,4 +55,60 @@ a:visited {
   color:            #675c47;
   text-decoration:  none;
   border-bottom:    thin dotted #675c47;
+}
+div.tableContainer {
+  display: table;
+  margin: 10px
+}
+div.talbeRow {
+  display: table-row;
+}
+section.main {
+  display: table-cell;
+}
+aside {
+  display: table-cell;
+}
+div.tableContainer {
+  display: talbe;
+  border-spacing: 10px;  
+}
+section.main {
+  display: table-cell;
+  vertical-align: top;
+}  
+aside {
+  display: table-cell;
+  vertical-align: top;
+}
+section.drinks {
+  display: table-cell;
+  background-color: #efe5d0;
+  padding: 15px;
+}
+.award {
+	position: fixed;
+	top: 30px;
+	left: 45%;
+  animation: rotate 1000s linear infinite; 
+}
+.coupon{
+  position:fixed;
+  top: 350px;
+  left: -210px;
+  transition: left 0.5s ease;
+}
+.coupon a, img{
+  border:none;
+}
+.coupon:hover{
+   left: 0px;
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
