07增加新的文件

--- a/shangke/07/starbuzz.css
+++ b/shangke/07/starbuzz.css
@@ -63,8 +63,13 @@ div.tableContainer {
 div.talbeRow {
   display: table-row;
 }
-section.main {
+section.main, section.blog{
   display: table-cell;
+  background: #efe5d0 
+  url(images/background.gif) top left;
+  font-size:        105%;
+  padding:          15px;
+  vertical-align: top;
 }
 aside {
   display: table-cell;
@@ -90,7 +95,7 @@ section.drinks {
 	position: fixed;
 	top: 30px;
 	left: 45%;
-  animation: rotate 1000s linear infinite; 
+  animation: rotate 0.1s linear infinite; 
 }
 .coupon{
   position:fixed;
@@ -111,4 +116,21 @@ section.drinks {
   100% {
     transform: rotate(360deg);
   }
+}
+ul {
+	margin: 0px;
+	list-style-type: none;
+	padding: 5px 0px 5px 0px;
+}
+ul li {
+	display: inline;
+	padding: 5px 10px 5px 10px;
+}
+ul li a:link, nav ul li a:visited {
+	color: #954b4b;
+	border-bottom: none;
+	font-weight: bold;
+}
+ul li.selected {
+	background-color: #c8b99c;
 }
