--- a/期末作业 2/Minecraft.css
+++ b/期末作业 2/Minecraft.css
@@ -76,6 +76,16 @@ img{
     margin: -513px 1098px -513px 1098px;
     color: #ffffff;
 }
+.d{
+    position:relative;
+    background: #1c1b1b;
+    width: 320px;
+    height: 150px;
+    background-color: #1c1b1b;
+    opacity: 0.7;
+    margin: -513px 1098px -513px 1098px;
+    color: #ffffff;
+}
 h3{
     font-size: 13px;
 }
