--- a/期末作业 2/Minecraft.css
+++ b/期末作业 2/Minecraft.css
@@ -70,20 +70,70 @@ img{
     position:relative;
     background: #1c1b1b;
     width: 320px;
-    height: 150px;
+    height: 140px;
     background-color: #1c1b1b;
     opacity: 0.7;
-    margin: -513px 1098px -513px 1098px;
+    margin: -503px 1098px -503px 1098px;
     color: #ffffff;
 }
 .d{
     position:relative;
     background: #1c1b1b;
     width: 320px;
-    height: 150px;
+    height: 140px;
     background-color: #1c1b1b;
     opacity: 0.7;
-    margin: -513px 1098px -513px 1098px;
+    margin: 711px 52px 711px 52px;
+    color: #ffffff;
+}
+.e{
+    position:relative;
+    background: #1c1b1b;
+    width: 320px;
+    height: 105px;
+    background-color: #1c1b1b;
+    opacity: 0.7;
+    margin: -815px 401px -815px 401px;
+    color: #ffffff;
+}
+.f{
+    position:relative;
+    background: #1c1b1b;
+    width: 320px;
+    height: 135px;
+    background-color: #1c1b1b;
+    opacity: 0.7;
+    margin: 679px 749.5px 679px 749.5px;
+    color: #ffffff;
+}
+.g{
+    position:relative;
+    background: #1c1b1b;
+    width: 320px;
+    height: 105px;
+    background-color: #1c1b1b;
+    opacity: 0.7;
+    margin: -784px 1098px -784px 1098px;
+    color: #ffffff;
+}
+.h{
+    position:relative;
+    background: #1c1b1b;
+    width: 320px;
+    height: 125px;
+    background-color: #1c1b1b;
+    opacity: 0.7;
+    margin: 1007px 52px 1007px 52px;
+    color: #ffffff;
+}
+.i{
+    position:relative;
+    background: #1c1b1b;
+    width: 320px;
+    height: 115px;
+    background-color: #1c1b1b;
+    opacity: 0.7;
+    margin: -1121px 401px -1121px 401px;
     color: #ffffff;
 }
 h3{
@@ -92,10 +142,10 @@ h3{
 h2{
     font-size: 20px;
 }
-p1{
+h4{
     font-size: 15px;
 }
-.a,.b,.c,.v{
+.a,.b,.c,.v,.d,.e,.f,.g,.h,.i{
     line-height: 1;
     font-size: -100px;
 }
@@ -104,9 +154,35 @@ h3{
     display: inline-block;  
     color: #1c1b1b;
 }
-h2,h3,p1{
+h2,h3,h4{
     margin-left: 10px;
     margin-right: 10px;
     text-align: 20px;
+    margin-bottom: -7px;
+}
+.ku{
+    position:absolute;
+    background: #1c1b1b;
+    width: 1000px;
+    height: 100px;
+    margin: 1200px 52px 1200px 52px;
+}
+.kuliba{
+    position:relative   ;
+    margin: 1000px 52px 1000px 52px;
+    padding: 20px;
+    width: 40px;
+    height: 40px;
+}
+h5,h6{
+    color: #ffffff;
+    margin-left: 30px;
+    margin-right: 60px;
+}
+h5{
+    font-size: 15px;
+}
+h6{
+    font-size: 13px;
 }
 
