--- a/期末作业/Minecraft.css
+++ b/期末作业/Minecraft.css
@@ -25,3 +25,31 @@ h1,p{
     text-align: center;
     font-family: 等线, Verdana, Arial, sans-serif;
 }
+.dae{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+.m{
+    position: relative;
+    overflow:hidden;
+    max-width: 100%;
+    width: 320px;
+}
+.m img{
+    width: 320px;
+    height: 320px;
+}
+h3{
+    font-size: 13px;
+}
+h2{
+    font-size: 20px;
+}
+h4{
+    font-size: 15px;
+}
+h2,h4{
+    color: #ffffff;
+}
