--- a/期末作业/Minecraft.css
+++ b/期末作业/Minecraft.css
@@ -60,6 +60,7 @@ h2,h4{
     height: 140px;
     background-color: #1c1b1b;
     opacity: 0.7;
+    margin-top: 20px;
 }
 h3{
     position: relative;
@@ -68,4 +69,18 @@ h3{
     height: 15px;
     background-color: ghostwhite;
     opacity: 0.7;
+}
+.go{
+    position:absolute;
+    bottom: 0;
+    width: 100%;
+    height: 145px;
+    box-sizing: border-box;
+    transition: bottom o.5s ease;
+    overflow: hidden;
+    line-height: 1;
+    font-size: -100px;
+}
+.dae,.m:hover .go{
+    bottom: 10%;
 }
