--- a/wanchl/Minecraft.css
+++ b/wanchl/Minecraft.css
@@ -20,7 +20,7 @@ a{
 p{
     position:relative;
     top:60px;
-    font-size: 17px;
+    font-size: 18px;
 }
 h1,p{
     text-align: center;
@@ -48,9 +48,11 @@ h3{
 }
 h2{
     font-size: 20px;
+    margin-top: 20px;
 }
 h4{
     font-size: 15px;
+    margin-top: 25px;
 }
 h2,h4{
     color: #ffffff;
@@ -59,17 +61,18 @@ h2,h4{
     position: absolute;
     bottom: 0;
     box-sizing: border-box;
-    transition: bottom 0.7s ease;
+    transition: all 0.7s ease;
     overflow: hidden;
     line-height: 1;
-    font-size: -100px;
+    font-size: 16px;
     background: #1c1b1b;
     width: 320px;
-    height: 150px;
+    height: 127px;
     background-color: #1c1b1b;
     opacity: 0.7;
     padding-left: 15px;
     padding-top: 15px;
+    margin-bottom: -34px;
 }
 h3{
     position: relative;
@@ -77,18 +80,21 @@ h3{
     width: 80px;
     height: 15px;
     background-color: ghostwhite;
-    opacity: 0.7;
+    opacity: 1;
     display: inline;
     padding: 5px;
 }
 .dae,.m:hover .go{
     bottom: 10%;
 }
+.m:hover .go{
+    height: 150px;
+}
 .ku img{
     position: absolute;
     height: 80px;
     width: 80px;
-    margin-top: 30px;
+    margin-top: -105px;
     margin-left: 40px;
 }
 .ku{
@@ -97,7 +103,7 @@ h3{
     margin-bottom: -30px;
 }
 .kuli{
-    position: absolute;
+    position: relative;
     background: #131212;
     width: 1380px;
     height: 130px;
